# team-manager

./: .gitignore  README.md  env.example  issues_to_solve.md  personalized_group_details.py  pyproject.toml  requirements.txt  to-do-list.md
project/: settings.py  urls.py
register/: admin.py  forms.py  models.py  urls.py  views.py
register/migrations/: 0001_initial.py  0002_auto_20220210_2113.py  0003_auto_20220210_2234.py  0004_alter_dog_owner.py  0005_alter_dog_owner.py  0006_alter_dog_owner.py  0007_auto_20220219_1916.py  0008_alter_dog_field_exam_0.py  0009_alter_dog_field_exam_0.py  0010_auto_20220219_1922.py  0011_alter_dog_field_exam_0.py  0012_alter_dog_field_exam_0.py  0013_auto_20220219_1925.py  0014_alter_member_kpp_validity.py  0015_alter_member_kpp_course.py  0016_auto_20220219_2038.py  0017_auto_20220219_2040.py  0018_auto_20220219_2043.py  0019_auto_20220219_2045.py  0020_alter_member_kpp_validity.py  0021_myuuidmodel_member_member_slug_member_member_id.py  0022_alter_member_member_id_delete_myuuidmodel.py  0023_alter_member_member_id.py  0024_alter_member_member_id.py  0025_remove_member_member_id.py  0026_dog_dog_slug.py  0027_alter_dog_dog_slug_alter_member_member_slug.py  0028_alter_dog_owner.py  0029_alter_equipment_category.py  0030_rename_dog_slug_dog_slug_and_more.py  0031_alter_member_member_mobile.py  0032_alter_member_kpp_validity_and_more.py  0033_alter_member_slug.py  0034_alter_member_slug.py  0035_member_member_ref_id.py  (+2 more)
static/: 404.css  app.css  base.css
templates/: 404.html  base.html
x_personalized_settings/: front_settings.md
(+20 files in other folders)
