[tool.poetry]
name = "team-manager"
version = "0.1.0"
description = "Application for team management made in Django framework."
authors = ["Natalia Czapska <czapskanatalia@gmail.com>"]
readme = "README.md"
packages = [{include = "team_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
Pillow = "^9.3.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
